# Adiman

./: .gitignore  PLUGINS.md  README.md  flake.nix  host_functions.rs  pubspec.yaml
.github/workflows/: appimage-aarch64.yml  appimage-x86_64.yml  release.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/adiman/: MainActivity.kt
appimagestuff/: Adiman.desktop  AppRun
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: broken_icons.dart  main.dart  namida_ui_extensions.dart
lib/screens/: download_screen.dart  music_player_screen.dart  playlist_reorder_screen.dart  plugin_template_screen.dart  plugins_screen.dart  settings_screen.dart  song_selection_screen.dart
lib/services/: mpris_service.dart  playlist_order_service.dart  plugin_service.dart  prefs_service.dart  services.dart  update_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: acoustid.dart  color_extractor.dart  music_handler.dart  plugin_man.dart  plugin_man.freezed.dart  settings_store.dart  utils.dart  value_store.dart  value_store.freezed.dart
lib/widgets/: icon_buttons.dart  miniplayer.dart  misc.dart  plugin_popup.dart  plugin_service.dart  seekbars.dart  services.dart  settings.dart  snackbar.dart  volume.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs
rust/src/api/: acoustid.rs  color_extractor.rs  host_func_interface.rs  mod.rs  music_handler.rs  plugin_man.rs  settings_store.rs  utils.rs  value_store.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_adiman.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_adiman.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
