[package]
name = "rust_lib_adiman"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.3"
base64 = "0.22.1"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.11.1"
sha2 = "0.10.8"
audiotags = "0.5.0"

[build-dependencies]
flutter_rust_bridge_codegen = "=2.10.0"

[lints.rust]
unsafe_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
