[package]
name = "rust_lib_adiman"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.3"
base64 = "0.22.1"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.11.1"
sha2 = "0.10.8"
audiotags = "0.5.0"
anyhow = "1.0.98"
image = "0.25.6"
atomic_float = "1.1.0"
rodio = "0.21.1"
cd_audio = { git = "https://github.com/ChaosTheChaotic/cd_audio.git" }
extism = "1.12.0"
serde_json = "1.0.145"
rusty-chromaprint = "0.3.0"
symphonia = "0.5.5"

[build-dependencies]
flutter_rust_bridge_codegen = "=2.11.1"

[lints.rust]
unsafe_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
